Fix spelling and text-wrap in NavBar

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -29,4 +29,5 @@ nav ul a {
 	text-decoration: none;
 	font-weight: 600;
 	color: #000;
+	white-space: nowrap;
 }
